# passQL

./: .coderabbit.yaml  .gitignore  CHANGELOG.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pubspec.yaml  test.txt  version.yml
.issue/: 20260407-003-React_Client_초기_프로젝트_구성.md  20260407-004-Member_도메인_및_API_구현.md  20260407-005-5일_개발_로드맵_및_일정_관리.md  20260407-006-화면_명세_및_API_매핑_공유.md  20260407-007-Flyway_V0_0_15_누락_테이블_및_초기_시드_추가.md  20260407-008-Health_Check_API_엔드포인트_구현.md  20260408-001-Flyway_V1_보강_submission_및_question_is_active.md  20260408-005-Daily_Challenge_도메인_및_오늘의_챌린지_API.md  20260409-008-Spring_FastAPI_서버_PR_Preview_빌드_워크플로우_적용_및_빌드체크_추가.md  20260409-009-실시간_선택지_세트_생성_및_프리페치_아키텍처.md  20260410-002-Greeting_API_응답_스키마_개선_닉네임_분리_및_메시지_혼합.md  20260410-003-Readiness_API_Redis_캐싱_적용.md  20260410-005-시험일_경과_후_다음_회차_자동_전환.md  20260410-006-질문관리_대량_JSON_내보내기_가져오기_Sandbox_검증.md  20260410_#007_벌크_문제_생성_시_Sandbox_DB_Too_many_connections_오류.md  20260410_#008_BE_선택지_생성_SSE_및_제출_플로우_완성.md  20260410_#008_SandboxPool_설정값_하드코딩_및_동적_변경_불가_문제.md  20260410_#009_FE_문제풀기_화면_재설계_스키마_시각화_실행결과_비교.md  20260410_#010_통계_페이지_토픽별_분석_및_AI_코멘트_API.md  20260411_#009_SandboxExecutor_HikariPool_누수로_Too_many_connections_오류.md  (+33 more)
ai/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml
ai/src/: main.py
ai/src/apis/: ai_router.py  health_router.py
ai/src/core/: config.py  exceptions.py  logging.py
ai/src/models/: ai_request.py  ai_response.py
ai/src/services/: ai_service.py  gemini_client.py  ollama_client.py  qdrant_client.py  redis_settings.py
ai/src/utils/: auth.py
app/: CLAUDE.md  (+3 more)
(+1170 files in other folders)
