[project]
name = "passql-ai"
version = "0.0.1"
description = "passQL AI Server - SQL 오류 설명, diff 해설, 유사 문제 검색"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic-settings>=2.11.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.13.0",
    "redis>=5.0.0",
]
